--- a/posts/2022-10-01-project-spork-announcement.mdx
+++ b/posts/2022-10-01-project-spork-announcement.mdx
@@ -8,27 +8,27 @@ date: 2022-10-01
 
 Today I'm happy to announce my latest ~~obsession~~ piece of work, the beautifully-named "Project Spork".
 
-<div class="d-flex flex-column align-items-center p-4">
+<div className="d-flex flex-column align-items-center p-4">
   <img
     src="/assets/media/img/2022-10-01-project-spork-announcement/congress.svg"
     alt="Project Spork logo"
     width="200"
     height="200"
   />
-  <small class="gray pt-2">Project Spork's (provisional) logo</small>
+  <small className="gray pt-2">Project Spork's (provisional) logo</small>
 </div>
 
 It's a full-stack website and data analysis project that I've been spending brain cycles on recently, and I'm excited to share it and its lofty goals with the world.
 
 I intend it to be very similar to [They Work For You](https://theyworkforyou.com), a similar site described as a "parliamentary monitoring website" that tracks happenings in Westminster, as well as regional authorities in the United Kingdom.
 
-<div class="d-flex flex-column align-items-center p-4">
+<div className="d-flex flex-column align-items-center p-4">
   <img
     src="/assets/media/img/2022-10-01-project-spork-announcement/twfy-voting-record.png"
     alt="Voting record in They Work For You"
     width="600"
   />
-  <small class="gray pt-2 text-center" style="max-width:400px">
+  <small className="gray pt-2 text-center" style={{maxWidth: '400px'}}>
     A screenshot from They Work For You, showing the voting record of a member
     of the British Parliament
   </small>
