--- a/posts/2021-05-12-mxroute-migadu-comparison.mdx
+++ b/posts/2021-05-12-mxroute-migadu-comparison.mdx
@@ -3,6 +3,7 @@ layout: post
 title: "custom email on a budget: MXroute vs Migadu"
 tags: email economy
 date: 2021-05-12
+published: false
 ---
 
 _This post is unfinished, but I thought I'd release it._
