--- a/posts/2022-10-01-project-spork-announcement.mdx
+++ b/posts/2022-10-01-project-spork-announcement.mdx
@@ -4,6 +4,7 @@ title: "welcome to the world, Project Spork"
 tags: languages, rust, mistakes
 image: /assets/media/img/2022-10-01-project-spork-announcement/congress.svg
 date: 2022-10-01
+published: false
 ---
 
 Today I'm happy to announce my latest ~~obsession~~ piece of work, the beautifully-named "Project Spork".
