--- a/posts/2022-12-15-oms-learnings-from-aspnet.mdx
+++ b/posts/2022-12-15-oms-learnings-from-aspnet.mdx
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "ASP.NET 7: I'm in love"
+title: "An overview of some things I like in ASP.NET"
 tags: web dotnet aspnet databases
 date: 2022-12-15
 ---
