--- a/posts/2025-01-19-atlassian-internship-review.mdx
+++ b/posts/2025-01-19-atlassian-internship-review.mdx
@@ -1,12 +1,14 @@
 ---
 layout: post
-title: "3 Months at Atlassian Sydney: My review"
+title: "3 months at Atlassian Sydney"
 tags: careers internships atlassian big-tech
 date: 2025-01-19
 ---
 
-I'm winding down my three month Software Engineer internship at Atlassian's headquarters in Sydney. Here's some key thoughts and "ground rules" for the next cohort of interns:
+I'm winding down my three month Software Engineer internship at Atlassian's headquarters in Sydney. I've really enjoyed my time here - I've had the pleasure to work with a great team of diverse characters and backgrounds, do good work that delivers impact for my team and the company at large, and leave a lasting impact on my team.
 
+
+Here's some key thoughts and "ground rules" for the next cohort of interns:
 
 ## 1. Go to the fucking events
 **(This applies to in-person interns mostly, but also remote interns)**  
